--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/samuelesgs/node-js-coruse/issues"
   },
-  "homepage": "https://github.com/samuelesgs/node-js-coruse#readme"
+  "homepage": "https://github.com/samuelesgs/node-js-coruse#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.2",
+    "multer": "^1.4.5-lts.1"
+  }
 }
